--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
 * {
-  font-family: "lato", sans-serif;
+  font-family: 'lato', sans-serif;
   margin: 0;
   padding: 0;
   outline: none;
@@ -10,12 +10,29 @@
 }
 
 body {
-  background: rgb(33, 43, 69);
   background: linear-gradient(90deg, rgba(33, 43, 69, 1) 0%, rgba(54, 50, 101, 1) 100%);
+  /* background: rgb(33, 43, 69); */
   color: white;
   min-height: 100vh;
 }
 
-html {
+:root {
   scroll-behavior: smooth;
+
+  --green-gradient: linear-gradient(121deg, rgba(0, 206, 175, 1) 0%, rgba(0, 206, 132, 1) 100%);
+  --green-gradient-hover: linear-gradient(121deg, rgba(2, 198, 168, 1) 0%, rgba(2, 193, 124, 1) 100%);
+
+  --btn: 18px;
+  --btn-large: 22px;
+}
+
+button {
+  cursor: pointer;
+}
+
+@media (max-width: 1150px) {
+  :root {
+    --btn: 16px;
+    --btn-large: 20px;
+  }
 }
