--- a/client/src/css/Navbar.css
+++ b/client/src/css/Navbar.css
@@ -1,57 +1,51 @@
-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.navbar {
   padding: 30px;
 }
 
-nav > div {
+.navbar-container {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
+  align-items: center;
+  max-width: var(--max-width);
+  margin: 0 auto;
+}
+
+.navbar-brand-container {
+  display: flex;
+  justify-content: center;
   align-items: center;
 }
 
-nav img {
-  max-width: 35px;
-  width: 100%;
+.navbar-logo {
   margin-right: 15px;
 }
 
-nav strong {
+.navbar-brand {
   font-size: var(--strong);
-  font-weight: 500;
+  color: var(--dark);
+  font-weight: 900;
 }
 
-nav button {
-  margin-left: 10px;
+.navbar-links {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
 
-.login-btn {
-  border: none;
-  outline: none;
-  background: none;
-  cursor: pointer;
-  margin-left: 20px;
+.navbar-links > * {
+  margin-left: 25px;
 }
 
-.login-btn svg {
-  font-size: 2rem;
-  color: #fff;
+.navbar-links > *:first-child {
+  margin-left: 0;
 }
 
-.login-btn svg:hover {
-  color: rgb(228, 226, 226);
+#navbar-btn-svg {
+  margin-left: 8px;
 }
 
 @media (max-width: 1150px) {
-  nav img {
-    max-width: 30px;
-    margin-right: 12px;
-  }
-}
-
-@media (max-width: 550px) {
-  nav strong {
-    display: none;
+  .navbar-logo {
+    margin-right: 10px;
+    max-width: 34px;
   }
 }
