--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,29 +1,20 @@
 * {
   font-family: 'Manrope', sans-serif;
-  margin: 0;
-  padding: 0;
   outline: none;
   list-style: none;
   text-decoration: none;
   border: none;
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  /* background: linear-gradient(90deg, rgba(33, 43, 69, 1) 0%, rgba(54, 50, 101, 1) 100%); */
-  /* background: rgb(33, 43, 69); */
-  color: white;
   min-height: 100vh;
 }
 
 :root {
   scroll-behavior: smooth;
-
-  --green-gradient: linear-gradient(121deg, rgba(0, 206, 175, 1) 0%, rgba(0, 206, 132, 1) 100%);
-  --green-gradient-hover: linear-gradient(121deg, rgba(2, 198, 168, 1) 0%, rgba(2, 193, 124, 1) 100%);
-
-  --btn: 18px;
-  --btn-large: 22px;
 
   /* REDESIGN VARS: */
   --max-width: 1200px;
@@ -40,6 +31,7 @@ body {
   --h2: 48px;
   --h3: 36px;
 
+  --em: 26px;
   --strong: 24px;
   --p: 18px;
 }
@@ -68,6 +60,7 @@ small {
     --h2: 36px;
     --h3: 26px;
 
+    --em: 24px;
     --strong: 22px;
     --p: 16px;
   }
