--- a/client/src/css/Feature-card.css
+++ b/client/src/css/Feature-card.css
@@ -36,7 +36,7 @@
   display: block;
   text-align: center;
   font-style: normal;
-  font-size: var(--em);
+  font-size: var(--strong);
   color: var(--dark);
   margin: 20px auto 15px auto;
   font-weight: 800;
