--- a/client/src/css/Feature-card.css
+++ b/client/src/css/Feature-card.css
@@ -49,9 +49,13 @@
   margin-bottom: 25px;
 }
 
-@media (max-width: 300px) {
+@media (max-width: 700px) {
   .feature-card {
     max-width: 100%;
     width: 100%;
+  }
+
+  .feature-card-odd {
+    top: 0;
   }
 }
