--- a/client/src/css/Home-start.css
+++ b/client/src/css/Home-start.css
@@ -1,5 +1,5 @@
 .home-start {
-  padding: 100px 30px;
+  padding: 120px 30px;
 }
 
 .home-start-container {
@@ -59,8 +59,20 @@
   margin: 12px 0 50px 0;
 }
 
-.home-start button {
+.home-start-buttons {
+  display: flex;
   margin-top: 30px;
+}
+
+.home-start-buttons > *:first-child {
+  margin-right: 30px;
+}
+
+.home-start-buttons > *:last-child {
+  margin-right: 0;
+}
+
+.home-start button {
   width: 100%;
 }
 
