--- a/client/src/css/Input.css
+++ b/client/src/css/Input.css
@@ -14,6 +14,7 @@
 
 .inputbox-container input {
   outline: none;
+  font-weight: 600;
   background: var(--primary-lightest);
   color: var(--dark);
   font-size: var(--p);
