--- a/client/src/css/AuthForm.css
+++ b/client/src/css/AuthForm.css
@@ -1,30 +1,33 @@
 .AuthForm {
-  background: #324065;
+  background: #ffff;
   position: relative;
   padding: 30px;
   -webkit-box-shadow: 3px 11px 25px 0px rgba(0, 0, 0, 0.25);
   -moz-box-shadow: 3px 11px 25px 0px rgba(0, 0, 0, 0.25);
   box-shadow: 3px 11px 25px 0px rgba(0, 0, 0, 0.25);
+  max-width: 600px;
+  width: 100%;
 }
 
 .AuthForm-header {
-  width: 100%;
-  margin-bottom: 40px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-bottom: 40px;
+  width: 100%;
 }
 
 .AuthForm-header img {
-  margin-bottom: 10px;
-  width: 50px;
+  margin-bottom: 30px;
+  max-width: 60px;
+  width: 100%;
   height: auto;
 }
 
 .AuthForm-header h2 {
-  font-size: 1.8rem;
-  font-weight: 400;
+  font-size: var(--h2);
+  font-weight: 700;
   text-align: center;
 }
 
@@ -34,18 +37,19 @@
 
 .AuthForm-submit-btn {
   width: 100%;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   min-width: 0;
 }
 
 .AuthForm p {
-  font-size: 1.2rem;
+  font-size: var(--p);
 }
 
 .AuthForm span {
-  color: #99aad8;
   text-decoration: underline;
   cursor: pointer;
+  color: var(--primary);
+  font-weight: 700;
 }
 
 @media (max-width: 350px) {
