Auth error displays under sign up button to signify it isnt an error by one field only

--- a/client/src/css/Input.css
+++ b/client/src/css/Input.css
@@ -27,7 +27,8 @@
   color: var(--primary-dark);
 }
 
-.inputbox-container p {
+.inputbox-container p,
+.inputbox-error {
   margin: 8px 0;
   color: #a84632;
 }
